# wca-result-csv

./: CLAUDE.md  README.md  pyproject.toml
.cursor/rules/: python-poetry.mdc
src/wca_result_csv/result_analysis/: 33_people_best_history.py
