[project]
name = "wca-result-csv"
version = "0.1.0"
description = ""
authors = [
    {name = "unclefomotw",email = "unclefomotw@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.3,<3.0.0)"
]

[tool.poetry]
packages = [{include = "wca_result_csv", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
